crates/html-to-markdown-ffi/include/html_to_markdown.h


typedef struct HTMConversionOptions HTMConversionOptions;
typedef struct HTMConversionResult HTMConversionResult;
typedef struct HTMHeaderMetadata HTMHeaderMetadata;
typedef struct HTMNodeContext HTMNodeContext;
typedef struct HTMPreprocessingOptions HTMPreprocessingOptions;
typedef struct HTMVisitorHandle HTMVisitorHandle;
typedef struct HTMHtmVisitor HTMHtmVisitor;
typedef struct HTMHtmVisitorCallbacks {
  void *user_data;
  void (*free_string)(char*);
  int32_t (*visit_text)(const struct HTMHtmContext *ctx,
                        void *user_data,
                        const char *text,
                        char **out_custom,
                        uintptr_t *out_len);
  int32_t (*visit_element_start)(const struct HTMHtmContext *ctx,
                                 void *user_data,
                                 char **out_custom,
                                 uintptr_t *out_len);
  int32_t (*visit_element_end)(const struct HTMHtmContext *ctx,
                               void *user_data,
                               const char *output,
                               char **out_custom,
                               uintptr_t *out_len);
  int32_t (*visit_link)(const struct HTMHtmContext *ctx,
                        void *user_data,
                        const char *href,
                        const char *text,
                        const char *title,
                        char **out_custom,
                        uintptr_t *out_len);
  int32_t (*visit_image)(const struct HTMHtmContext *ctx,
                         void *user_data,
                         const char *src,
                         const char *alt,
                         const char *title,
                         char **out_custom,
                         uintptr_t *out_len);
  int32_t (*visit_heading)(const struct HTMHtmContext *ctx,
                           void *user_data,
                           uint32_t level,
                           const char *text,
                           const char *id,
                           char **out_custom,
                           uintptr_t *out_len);
  int32_t (*visit_code_block)(const struct HTMHtmContext *ctx,
                              void *user_data,
                              const char *lang,
                              const char *code,
                              char **out_custom,
                              uintptr_t *out_len);
  int32_t (*visit_code_inline)(const struct HTMHtmContext *ctx,
                               void *user_data,
                               const char *code,
                               char **out_custom,
                               uintptr_t *out_len);
  int32_t (*visit_list_item)(const struct HTMHtmContext *ctx,
                             void *user_data,
                             int32_t ordered,
                             const char *marker,
                             const char *text,
                             char **out_custom,
                             uintptr_t *out_len);
  int32_t (*visit_list_start)(const struct HTMHtmContext *ctx,
                              void *user_data,
                              int32_t ordered,
                              char **out_custom,
                              uintptr_t *out_len);
  int32_t (*visit_list_end)(const struct HTMHtmContext *ctx,
                            void *user_data,
                            int32_t ordered,
                            const char *output,
                            char **out_custom,
                            uintptr_t *out_len);
  int32_t (*visit_table_start)(const struct HTMHtmContext *ctx,
                               void *user_data,
                               char **out_custom,
                               uintptr_t *out_len);
  int32_t (*visit_table_row)(const struct HTMHtmContext *ctx,
                             void *user_data,
                             const char *const *cells,
                             uintptr_t cell_count,
                             int32_t is_header,
                             char **out_custom,
                             uintptr_t *out_len);
  int32_t (*visit_table_end)(const struct HTMHtmContext *ctx,
                             void *user_data,
                             const char *output,
                             char **out_custom,
                             uintptr_t *out_len);
  int32_t (*visit_blockquote)(const struct HTMHtmContext *ctx,
                              void *user_data,
                              const char *content,
                              uintptr_t depth,
                              char **out_custom,
                              uintptr_t *out_len);
  int32_t (*visit_strong)(const struct HTMHtmContext *ctx,
                          void *user_data,
                          const char *text,
                          char **out_custom,
                          uintptr_t *out_len);
  int32_t (*visit_emphasis)(const struct HTMHtmContext *ctx,
                            void *user_data,
                            const char *text,
                            char **out_custom,
                            uintptr_t *out_len);
  int32_t (*visit_strikethrough)(const struct HTMHtmContext *ctx,
                                 void *user_data,
                                 const char *text,
                                 char **out_custom,
                                 uintptr_t *out_len);
  int32_t (*visit_underline)(const struct HTMHtmContext *ctx,
                             void *user_data,
                             const char *text,
                             char **out_custom,
                             uintptr_t *out_len);
  int32_t (*visit_subscript)(const struct HTMHtmContext *ctx,
                             void *user_data,
                             const char *text,
                             char **out_custom,
                             uintptr_t *out_len);
  int32_t (*visit_superscript)(const struct HTMHtmContext *ctx,
                               void *user_data,
                               const char *text,
                               char **out_custom,
                               uintptr_t *out_len);
  int32_t (*visit_mark)(const struct HTMHtmContext *ctx,
                        void *user_data,
                        const char *text,
                        char **out_custom,
                        uintptr_t *out_len);
  int32_t (*visit_line_break)(const struct HTMHtmContext *ctx,
                              void *user_data,
                              char **out_custom,
                              uintptr_t *out_len);
  int32_t (*visit_horizontal_rule)(const struct HTMHtmContext *ctx,
                                   void *user_data,
                                   char **out_custom,
                                   uintptr_t *out_len);
  int32_t (*visit_custom_element)(const struct HTMHtmContext *ctx,
                                  void *user_data,
                                  const char *tag_name,
                                  const char *html,
                                  char **out_custom,
                                  uintptr_t *out_len);
  int32_t (*visit_definition_list_start)(const struct HTMHtmContext *ctx,
                                         void *user_data,
                                         char **out_custom,
                                         uintptr_t *out_len);
  int32_t (*visit_definition_term)(const struct HTMHtmContext *ctx,
                                   void *user_data,
                                   const char *text,
                                   char **out_custom,
                                   uintptr_t *out_len);
  int32_t (*visit_definition_description)(const struct HTMHtmContext *ctx,
                                          void *user_data,
                                          const char *text,
                                          char **out_custom,
                                          uintptr_t *out_len);
  int32_t (*visit_definition_list_end)(const struct HTMHtmContext *ctx,
                                       void *user_data,
                                       const char *output,
                                       char **out_custom,
                                       uintptr_t *out_len);
  int32_t (*visit_form)(const struct HTMHtmContext *ctx,
                        void *user_data,
                        const char *action,
                        const char *method,
                        char **out_custom,
                        uintptr_t *out_len);
  int32_t (*visit_input)(const struct HTMHtmContext *ctx,
                         void *user_data,
                         const char *input_type,
                         const char *name,
                         const char *value,
                         char **out_custom,
                         uintptr_t *out_len);
  int32_t (*visit_button)(const struct HTMHtmContext *ctx,
                          void *user_data,
                          const char *text,
                          char **out_custom,
                          uintptr_t *out_len);
  int32_t (*visit_audio)(const struct HTMHtmContext *ctx,
                         void *user_data,
                         const char *src,
                         char **out_custom,
                         uintptr_t *out_len);
  int32_t (*visit_video)(const struct HTMHtmContext *ctx,
                         void *user_data,
                         const char *src,
                         char **out_custom,
                         uintptr_t *out_len);
  int32_t (*visit_iframe)(const struct HTMHtmContext *ctx,
                          void *user_data,
                          const char *src,
                          char **out_custom,
                          uintptr_t *out_len);
  int32_t (*visit_details)(const struct HTMHtmContext *ctx,
                           void *user_data,
                           int32_t open,
                           char **out_custom,
                           uintptr_t *out_len);
  int32_t (*visit_summary)(const struct HTMHtmContext *ctx,
                           void *user_data,
                           const char *text,
                           char **out_custom,
                           uintptr_t *out_len);
  int32_t (*visit_figure_start)(const struct HTMHtmContext *ctx,
                                void *user_data,
                                char **out_custom,
                                uintptr_t *out_len);
  int32_t (*visit_figcaption)(const struct HTMHtmContext *ctx,
                              void *user_data,
                              const char *text,
                              char **out_custom,
                              uintptr_t *out_len);
  int32_t (*visit_figure_end)(const struct HTMHtmContext *ctx,
                              void *user_data,
                              const char *output,
                              char **out_custom,
                              uintptr_t *out_len);
} HTMHtmVisitorCallbacks;
int32_t htm_last_error_code(void);
const char *htm_last_error_context(void);
void htm_free_string(char *ptr);
HTMHeaderMetadata *htm_header_metadata_from_json(const char *json);
char *htm_header_metadata_to_json(const HTMHeaderMetadata *ptr);
void htm_header_metadata_free(HTMHeaderMetadata *ptr);
int32_t htm_header_metadata_is_valid(const HTMHeaderMetadata *this_);
HTMConversionOptions *htm_conversion_options_from_json(const char *json);
char *htm_conversion_options_to_json(const HTMConversionOptions *ptr);
void htm_conversion_options_free(HTMConversionOptions *ptr);
HTMConversionOptions *htm_conversion_options_default(void);
char *htm_preprocessing_options_to_json(const HTMPreprocessingOptions *ptr);
void htm_preprocessing_options_free(HTMPreprocessingOptions *ptr);
HTMPreprocessingOptions *htm_preprocessing_options_default(void);
char *htm_conversion_result_to_json(const HTMConversionResult *ptr);
void htm_conversion_result_free(HTMConversionResult *ptr);
void htm_visitor_handle_free(HTMVisitorHandle *ptr);
HTMNodeContext *htm_node_context_from_json(const char *json);
char *htm_node_context_to_json(const HTMNodeContext *ptr);
void htm_node_context_free(HTMNodeContext *ptr);
char *htm_node_context_attributes(const HTMNodeContext *this_);
HTMNodeContext *htm_node_context_with_owned_attributes(int32_t node_type,
                                                       const char *tag_name,
                                                       const char *attributes,
                                                       uintptr_t depth,
                                                       uintptr_t index_in_parent,
                                                       const char *parent_tag,
                                                       int32_t is_inline);
HTMNodeContext *htm_node_context_into_owned(HTMNodeContext *this_);
HTMConversionResult *htm_convert(const char *html,
                                 const HTMConversionOptions *options);
void htm_options_set_visitor(HTMConversionOptions *options,
                             struct HTMHtmVisitor *visitor);
struct HTMHtmVisitor *htm_visitor_create(const struct HTMHtmVisitorCallbacks *callbacks);
void htm_visitor_free(struct HTMHtmVisitor *visitor);