packages/csharp/HtmlToMarkdown/NativeMethods.cs

// This file is auto-generated by alef. DO NOT EDIT.
// alef:hash:50c7097766ecb43efe62b822c2a6641dbcd5a664ef38bc5eb9d35d2e60b9a7ff
// alef:handle-abi:1
#nullable enable

using System;
using System.Runtime.InteropServices;

namespace HtmlToMarkdown;

internal static partial class NativeMethods
{
    private const string LibName = "html_to_markdown_ffi";

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "htm_visitor_handle_free")]
    internal static extern void VisitorHandleFree(ulong ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "htm_conversion_options_from_json")]
    internal static extern ulong ConversionOptionsFromJson([MarshalAs(UnmanagedType.LPUTF8Str)] string json);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "htm_conversion_options_free")]
    internal static extern void ConversionOptionsFree(ulong ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "htm_header_metadata_from_json")]
    internal static extern ulong HeaderMetadataFromJson([MarshalAs(UnmanagedType.LPUTF8Str)] string json);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "htm_header_metadata_free")]
    internal static extern void HeaderMetadataFree(ulong ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "htm_node_context_from_json")]
    internal static extern ulong NodeContextFromJson([MarshalAs(UnmanagedType.LPUTF8Str)] string json);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "htm_node_context_free")]
    internal static extern void NodeContextFree(ulong ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "htm_conversion_options_to_json")]
    internal static extern IntPtr ConversionOptionsToJson(ulong ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "htm_conversion_result_to_json")]
    internal static extern IntPtr ConversionResultToJson(ulong ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "htm_conversion_result_free")]
    internal static extern void ConversionResultFree(ulong ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "htm_header_metadata_to_json")]
    internal static extern IntPtr HeaderMetadataToJson(ulong ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "htm_node_context_to_json")]
    internal static extern IntPtr NodeContextToJson(ulong ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "htm_preprocessing_options_to_json")]
    internal static extern IntPtr PreprocessingOptionsToJson(ulong ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "htm_preprocessing_options_free")]
    internal static extern void PreprocessingOptionsFree(ulong ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "htm_convert")]
    internal static extern ulong Convert(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string html,
        ulong options
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "htm_conversion_options_default")]
    internal static extern ulong ConversionOptionsDefault();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "htm_header_metadata_is_valid")]
    internal static extern int HeaderMetadataIsValid(
        ulong handle
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "htm_node_context_attributes")]
    internal static extern IntPtr NodeContextAttributes(
        ulong handle
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "htm_node_context_with_owned_attributes")]
    internal static extern ulong NodeContextWithOwnedAttributes(
        int nodeType,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string tagName,
        IntPtr attributes,
        ulong depth,
        ulong indexInParent,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string parentTag,
        int isInline
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "htm_node_context_into_owned")]
    internal static extern ulong NodeContextIntoOwned(
        ulong handle
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "htm_preprocessing_options_default")]
    internal static extern ulong PreprocessingOptionsDefault();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "htm_last_error_code")]
    internal static extern int LastErrorCode();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "htm_last_error_context")]
    internal static extern IntPtr LastErrorContext();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "htm_free_string")]
    internal static extern void FreeString(IntPtr ptr);


    // Visitor FFI (HtmlVisitorBridge)
    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "htm_visitor_create")]
    internal static extern ulong VisitorCreate(IntPtr callbacksPtr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "htm_visitor_free")]
    internal static extern void VisitorFree(ulong visitor);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "htm_options_set_visitor")]
    internal static extern void ConversionOptionsSetVisitor(ulong options, ulong visitor);
}
